--- a/pandas_module_practice.ipynb
+++ b/pandas_module_practice.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +106,172 @@
     "df = df.apply(lambda a : a+1 )\n",
     "print(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pconda\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell is about string.maketrans()\n",
+    "import string\n",
+    "\n",
+    "obj = 'python'\n",
+    "before = 'ython'\n",
+    "after = 'conda'\n",
+    "sen = obj.maketrans(before,after)\n",
+    "print(obj.translate(sen)) # This function is substituting the string with another string.\n",
+    "# The prerequisite for this function is the before and after should have the same length."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like apple and apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell is about re.sub() function. \n",
+    "# Example of this function is as follows. \n",
+    "import re \n",
+    "\n",
+    "text = 'I like abple and abple'\n",
+    "text_mod = re.sub('abple','apple',text)\n",
+    "\n",
+    "print(text_mod) # So this function is replacing certain words with another words."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Publish or Periiish\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell is about removing the repeated characters.\n",
+    "import re # Regular expression \n",
+    "text = 'Publish or Periiish'\n",
+    "text_sub = re.sub(r'(.)1+',r'1',text) # +1 means that if the string is repeated more than 1 time, it is removed. \n",
+    "#text_sub = re.sub(r'(.)1+',r'1',text)\n",
+    "print(text_sub)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://cosmosproject.tistory.com/180\n",
+    "The site above explains about the syntax of the re.sub() function.\n",
+    "https://www.nextree.co.kr/p4327/\n",
+    "This site contains nice reference for regular expression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Publish', 'or', 'Perish']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "# Regular expression is very useful for text processing.\n",
+    "# But, it will take some time to be familiar with re.\n",
+    "text = 'Publish or Perish!'\n",
+    "#tokenizer = RegexpTokenizer(r\"w+\", gaps = True)\n",
+    "tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "# For the second argument, we can specify the criteria for the tokenization.\n",
+    "print(tokenizer.tokenize(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['the', 'greatest', 'glori', 'in', 'live', 'lie', 'not', 'in', 'never', 'fall', 'but', 'in', 'rise', 'everi', 'time', 'we', 'fall']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\every\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['The', 'greatest', 'glory', 'in', 'living', 'lie', 'not', 'in', 'never', 'falling', 'but', 'in', 'rising', 'every', 'time', 'we', 'fall']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In this cell, I tried to observe the difference between stemming and lemmatizing.\n",
+    "import nltk\n",
+    "nltk.download('wordnet')\n",
+    "from nltk import WordNetLemmatizer\n",
+    "import os\n",
+    "\n",
+    "dir = r'C:\\Program Files (x86)\\WordNet\\2.1'\n",
+    "os.chdir(dir)\n",
+    "\n",
+    "stemmizer = nltk.PorterStemmer()\n",
+    "text = 'The greatest glory in living lies not in never falling, but in rising every time we fall.'\n",
+    "text = tokenizer.tokenize(text)\n",
+    "\n",
+    "text_stem = [stemmizer.stem(word) for word in text]\n",
+    "# In order to use for loop, we need to put those in the list.\n",
+    "print((text_stem))\n",
+    "# The result is not 100% accurate.\n",
+    "# How about lemmatizer?\n",
+    "lemmatizer = nltk.WordNetLemmatizer()\n",
+    "text_lem = [lemmatizer.lemmatize(word) for word in text]\n",
+    "print(text_lem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
