--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -215,16 +215,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['the', 'greatest', 'glori', 'in', 'live', 'lie', 'not', 'in', 'never', 'fall', 'but', 'in', 'rise', 'everi', 'time', 'we', 'fall']\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -238,6 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['the', 'greatest', 'glori', 'in', 'live', 'lie', 'not', 'in', 'never', 'fall', 'but', 'in', 'rise', 'everi', 'time', 'we', 'fall']\n",
       "['The', 'greatest', 'glory', 'in', 'living', 'lie', 'not', 'in', 'never', 'falling', 'but', 'in', 'rising', 'every', 'time', 'we', 'fall']\n"
      ]
     }
@@ -248,9 +242,6 @@
     "nltk.download('wordnet')\n",
     "from nltk import WordNetLemmatizer\n",
     "import os\n",
-    "\n",
-    "dir = r'C:\\Program Files (x86)\\WordNet\\2.1'\n",
-    "os.chdir(dir)\n",
     "\n",
     "stemmizer = nltk.PorterStemmer()\n",
     "text = 'The greatest glory in living lies not in never falling, but in rising every time we fall.'\n",
@@ -268,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -291,14 +282,334 @@
     "print(list(enumerate(courses)))\n",
     "# The function enumerate will return the index and the element at the same time.\n",
     "# return : [(0, 'NERS441'), (1, 'NERS444'), (2, 'NERS442'), (3, 'NERS561'), (4, 'NERS544')]\n",
-    "for n, course in enumerate(courses):\n",
+    "for n, course in enumerate(courses): # returns index first and then the element.\n",
     "    print(f'course : {course}, number : {n}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Integer encoding process is usually done based on the frequency of each word.\n",
+    "article = 'Nuclear Bombs save half the lives of Traditional Nuclear Bombs because their radioactive components have half the half life of full half life bombs. This is why science works.'\n",
+    "article = tokenizer.tokenize(article)\n",
+    "article = [stemmizer.stem(word) for word in article]\n",
+    "article = [lemmatizer.lemmatize(word) for word in article]\n",
+    "#print(article)\n",
+    "\n",
+    "vocab = [] # Empty array for integer encoding\n",
+    "#vocab = list(enumerate(article))\n",
+    "\n",
+    "#for n, name in enumerate(article): # n is the index, name is the word.\n",
+    "    #print(f'word : {name}, number : {n}')\n",
+    "    #frequency = 1\n",
+    "    #if name not in vocab: # New words\n",
+    "    #    vocab.append(name)\n",
+    "    \n",
+    "#print(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Padding process \n",
+    "# Zero padding\n",
+    "# The objective of padding is to make all the arrays to have same length."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('because', 0),\n",
+       " ('bombs', 1),\n",
+       " ('but', 2),\n",
+       " ('components', 3),\n",
+       " ('every', 4),\n",
+       " ('fall', 5),\n",
+       " ('falling', 6),\n",
+       " ('full', 7),\n",
+       " ('glory', 8),\n",
+       " ('greatest', 9),\n",
+       " ('half', 10),\n",
+       " ('have', 11),\n",
+       " ('in', 12),\n",
+       " ('is', 13),\n",
+       " ('lies', 14),\n",
+       " ('life', 15),\n",
+       " ('lives', 16),\n",
+       " ('living', 17),\n",
+       " ('never', 18),\n",
+       " ('not', 19),\n",
+       " ('nuclear', 20),\n",
+       " ('of', 21),\n",
+       " ('radioactive', 22),\n",
+       " ('rising', 23),\n",
+       " ('save', 24),\n",
+       " ('science', 25),\n",
+       " ('the', 26),\n",
+       " ('their', 27),\n",
+       " ('this', 28),\n",
+       " ('time', 29),\n",
+       " ('traditional', 30),\n",
+       " ('we', 31),\n",
+       " ('why', 32),\n",
+       " ('works', 33)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# One hot encoding \n",
+    "# One hot encoding is inefficient in terms of memory. \n",
+    "# word2vec encoding - This reflects the similarity in the encoding process.\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "text = ['The greatest glory in living lies not in never falling, but in rising every time we fall.',\n",
+    "        'Nuclear Bombs save half the lives of Traditional Nuclear Bombs because their radioactive components have half the half life of full half life bombs. This is why science works.']\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "vectorizer.fit(text) # Input is a collection of documents.\n",
+    "print(type(text)) # Input should be list type.\n",
+    "# From 'fit' command, the machine is going to study what kind of vocabs are in the data.\n",
+    "vectorizer.vocabulary_ # Print the vocab dictionary\n",
+    "sorted(vectorizer.vocabulary_.items()) # This will sort the vocab dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['and' 'document' 'first' 'fourth' 'is' 'one' 'or' 'perish' 'publish'\n",
+      " 'published' 'second' 'the' 'third' 'this']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1],\n",
+       "       [0, 2, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1],\n",
+       "       [1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1],\n",
+       "       [0, 1, 0, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This cell is about the understanding of the vectorizer. \n",
+    "import numpy as np \n",
+    "import pandas as pd \n",
+    "import sklearn\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "\n",
+    "corpus_train = [\"this is the first document\",\n",
+    "\"this document is the second document\",\n",
+    "\"And this is the third one.\",\n",
+    "\"Is this the fourth published document?\", \"publish or perish\",\"publish or perish\"]\n",
+    "# print(corpus_train)\n",
+    "\n",
+    "vectorizer = CountVectorizer()\n",
+    "vectorizer.fit(corpus_train) # By this command, it will provide a dictionary of the vocabularies.\n",
+    "\n",
+    "X = vectorizer.fit_transform(corpus_train) # Vectorizer will make the text into the vector\n",
+    "vectorizer.vocabulary_\n",
+    "print(vectorizer.get_feature_names_out(corpus_train))\n",
+    "X.toarray()\n",
+    "# From this array, we notice that the number of nonzero elements are the same as the number of the words in the sentence.\n",
+    "# the element 2 means that the term appeared 2 times in a single document.\n",
+    "# We noticed that the words are sorted based on the alphabet sequence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 1 1 1 1 1 2 1 2 1 2]\n",
+      " [0 0 0 0 0 0 0 0 0 0 3]]\n",
+      "   every  hard  hour  how  in  is  success  that  to  waking  work\n",
+      "0      1     1     1    1   1   1        2     1   2       1     2\n",
+      "1      0     0     0    0   0   0        0     0   0       0     3\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_data = [\"work hard in every waking hour, that is how to success. work to success!\",\"Work 1,work 2,work 3\"]\n",
+    "vectorizer.fit(test_data)\n",
+    "result = vectorizer.transform(test_data)\n",
+    "print(result.toarray())\n",
+    "\n",
+    "Doc_Term_Matrix = pd.DataFrame(result.toarray(),columns = vectorizer.get_feature_names_out())\n",
+    "print(Doc_Term_Matrix) \n",
+    "# Note that in the countvectorizer, it only counts the number of the term in a single sentence.\n",
+    "# By this simple experiment, I think the vectorizer is doing pre-processing on its own."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 1)\t0.46979138557992045\n",
+      "  (0, 2)\t0.5802858236844359\n",
+      "  (0, 6)\t0.38408524091481483\n",
+      "  (0, 3)\t0.38408524091481483\n",
+      "  (0, 8)\t0.38408524091481483\n",
+      "  (1, 5)\t0.5386476208856763\n",
+      "  (1, 1)\t0.6876235979836938\n",
+      "  (1, 6)\t0.281088674033753\n",
+      "  (1, 3)\t0.281088674033753\n",
+      "  (1, 8)\t0.281088674033753\n",
+      "  (2, 4)\t0.511848512707169\n",
+      "  (2, 7)\t0.511848512707169\n",
+      "  (2, 0)\t0.511848512707169\n",
+      "  (2, 6)\t0.267103787642168\n",
+      "  (2, 3)\t0.267103787642168\n",
+      "  (2, 8)\t0.267103787642168\n",
+      "  (3, 1)\t0.46979138557992045\n",
+      "  (3, 2)\t0.5802858236844359\n",
+      "  (3, 6)\t0.38408524091481483\n",
+      "  (3, 3)\t0.38408524091481483\n",
+      "  (3, 8)\t0.38408524091481483\n",
+      "(4, 9)\n",
+      "        and  document     first        is       one    second       the  \\\n",
+      "0  0.000000  0.469791  0.580286  0.384085  0.000000  0.000000  0.384085   \n",
+      "1  0.000000  0.687624  0.000000  0.281089  0.000000  0.538648  0.281089   \n",
+      "2  0.511849  0.000000  0.000000  0.267104  0.511849  0.000000  0.267104   \n",
+      "3  0.000000  0.469791  0.580286  0.384085  0.000000  0.000000  0.384085   \n",
+      "\n",
+      "      third      this  \n",
+      "0  0.000000  0.384085  \n",
+      "1  0.000000  0.281089  \n",
+      "2  0.511849  0.267104  \n",
+      "3  0.000000  0.384085  \n",
+      "(4, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1.91629073, 1.22314355, 1.51082562, 1.        , 1.91629073,\n",
+       "       1.91629073, 1.        , 1.91629073, 1.        ])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This cell is about Tfidf vectorizer\n",
+    "# This will convert text into tfidf feature.\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "corpus = [\n",
+    "    'This is the first document.',\n",
+    "    'This document is the second document.',\n",
+    "    'And this is the third one.',\n",
+    "    'Is this the first document?'\n",
+    "]\n",
+    "vectorizer = TfidfVectorizer(min_df=0.1)\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "print(X)\n",
+    "print(X.shape)\n",
+    "# Learn the vocaboularies, tf and idf \n",
+    "# Returns a document term matrix.\n",
+    "vectorizer.get_feature_names_out()\n",
+    "Doc_Term_Matrix = pd.DataFrame(X.toarray(),columns = vectorizer.get_feature_names_out())\n",
+    "print(Doc_Term_Matrix) \n",
+    "print(Doc_Term_Matrix.shape)\n",
+    "# This will be the tf of each term.\n",
+    "# Note that tf is computed as the frequency within a document.\n",
+    "vectorizer.idf_ # It will show you the inverse document frequency."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 0)\t-0.5773502691896258\n",
+      "  (0, 8)\t-0.5773502691896258\n",
+      "  (0, 13)\t0.5773502691896258\n",
+      "  (0, 14)\t0.0\n",
+      "  (1, 0)\t-0.8164965809277261\n",
+      "  (1, 11)\t0.4082482904638631\n",
+      "  (1, 13)\t0.4082482904638631\n",
+      "  (1, 14)\t0.0\n",
+      "  (2, 4)\t-0.7071067811865475\n",
+      "  (2, 5)\t0.7071067811865475\n",
+      "  (2, 13)\t0.0\n",
+      "  (2, 14)\t0.0\n",
+      "  (3, 0)\t-0.5773502691896258\n",
+      "  (3, 8)\t-0.5773502691896258\n",
+      "  (3, 13)\t0.5773502691896258\n",
+      "  (3, 14)\t0.0\n",
+      "(4, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This cell will explain what hashing vectorizer is. \n",
+    "from sklearn.feature_extraction.text import HashingVectorizer\n",
+    "corpus = [\n",
+    "    'This is the first document.',\n",
+    "    'This document is the second document.',\n",
+    "    'And this is the third one.',\n",
+    "    'Is this the first document?'\n",
+    "]\n",
+    "# print(sample_text)\n",
+    "vectorizer = HashingVectorizer(n_features= 2**4)\n",
+    "Fit_text = vectorizer.fit_transform(corpus)\n",
+    "print(Fit_text) \n",
+    "print(Fit_text.shape) # (4,16)\n",
+    "# (4,16) means that there are 4 documents, and 16 words.\n",
+    "# The text is vectorized."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.11 64-bit (microsoft store)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -312,12 +623,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "89d36f605ae3aa71791baed15afeef29ec51f91c7f29be8219898f2e245b2a11"
+    "hash": "35a25c9872cbda683d5908eca59acc1b206505f792393dc9b104ecdd0b60136b"
    }
   }
  },
