updated. Tutorial done

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,9 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Integer encoding process is usually done based on the frequency of each word.\n",
     "article = 'Nuclear Bombs save half the lives of Traditional Nuclear Bombs because their radioactive components have half the half life of full half life bombs. This is why science works.'\n",
@@ -313,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,60 +332,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('because', 0),\n",
-       " ('bombs', 1),\n",
-       " ('but', 2),\n",
-       " ('components', 3),\n",
-       " ('every', 4),\n",
-       " ('fall', 5),\n",
-       " ('falling', 6),\n",
-       " ('full', 7),\n",
-       " ('glory', 8),\n",
-       " ('greatest', 9),\n",
-       " ('half', 10),\n",
-       " ('have', 11),\n",
-       " ('in', 12),\n",
-       " ('is', 13),\n",
-       " ('lies', 14),\n",
-       " ('life', 15),\n",
-       " ('lives', 16),\n",
-       " ('living', 17),\n",
-       " ('never', 18),\n",
-       " ('not', 19),\n",
-       " ('nuclear', 20),\n",
-       " ('of', 21),\n",
-       " ('radioactive', 22),\n",
-       " ('rising', 23),\n",
-       " ('save', 24),\n",
-       " ('science', 25),\n",
-       " ('the', 26),\n",
-       " ('their', 27),\n",
-       " ('this', 28),\n",
-       " ('time', 29),\n",
-       " ('traditional', 30),\n",
-       " ('we', 31),\n",
-       " ('why', 32),\n",
-       " ('works', 33)]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# One hot encoding \n",
     "# One hot encoding is inefficient in terms of memory. \n",
@@ -395,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +374,7 @@
        "       [0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,173 +400,49 @@
     "vectorizer.vocabulary_\n",
     "print(vectorizer.get_feature_names_out(corpus_train))\n",
     "X.toarray()\n",
-    "# From this array, we notice that the number of nonzero elements are the same as the number of the words in the sentence.\n",
-    "# the element 2 means that the term appeared 2 times in a single document.\n",
-    "# We noticed that the words are sorted based on the alphabet sequence."
+    "# From this array, we notice that the number of nonzero elements are the same as the number of the words in the sentence."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1 1 1 1 1 1 2 1 2 1 2]\n",
-      " [0 0 0 0 0 0 0 0 0 0 3]]\n",
-      "   every  hard  hour  how  in  is  success  that  to  waking  work\n",
-      "0      1     1     1    1   1   1        2     1   2       1     2\n",
-      "1      0     0     0    0   0   0        0     0   0       0     3\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_data = [\"work hard in every waking hour, that is how to success. work to success!\",\"Work 1,work 2,work 3\"]\n",
-    "vectorizer.fit(test_data)\n",
-    "result = vectorizer.transform(test_data)\n",
-    "print(result.toarray())\n",
-    "\n",
-    "Doc_Term_Matrix = pd.DataFrame(result.toarray(),columns = vectorizer.get_feature_names_out())\n",
-    "print(Doc_Term_Matrix) \n",
-    "# Note that in the countvectorizer, it only counts the number of the term in a single sentence.\n",
-    "# By this simple experiment, I think the vectorizer is doing pre-processing on its own."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  (0, 1)\t0.46979138557992045\n",
-      "  (0, 2)\t0.5802858236844359\n",
-      "  (0, 6)\t0.38408524091481483\n",
-      "  (0, 3)\t0.38408524091481483\n",
-      "  (0, 8)\t0.38408524091481483\n",
-      "  (1, 5)\t0.5386476208856763\n",
-      "  (1, 1)\t0.6876235979836938\n",
-      "  (1, 6)\t0.281088674033753\n",
-      "  (1, 3)\t0.281088674033753\n",
-      "  (1, 8)\t0.281088674033753\n",
-      "  (2, 4)\t0.511848512707169\n",
-      "  (2, 7)\t0.511848512707169\n",
-      "  (2, 0)\t0.511848512707169\n",
-      "  (2, 6)\t0.267103787642168\n",
-      "  (2, 3)\t0.267103787642168\n",
-      "  (2, 8)\t0.267103787642168\n",
-      "  (3, 1)\t0.46979138557992045\n",
-      "  (3, 2)\t0.5802858236844359\n",
-      "  (3, 6)\t0.38408524091481483\n",
-      "  (3, 3)\t0.38408524091481483\n",
-      "  (3, 8)\t0.38408524091481483\n",
-      "(4, 9)\n",
-      "        and  document     first        is       one    second       the  \\\n",
-      "0  0.000000  0.469791  0.580286  0.384085  0.000000  0.000000  0.384085   \n",
-      "1  0.000000  0.687624  0.000000  0.281089  0.000000  0.538648  0.281089   \n",
-      "2  0.511849  0.000000  0.000000  0.267104  0.511849  0.000000  0.267104   \n",
-      "3  0.000000  0.469791  0.580286  0.384085  0.000000  0.000000  0.384085   \n",
+      "   and  document  first  fourth  is  one  or  perish  publish  published  \\\n",
+      "0    0         1      1       0   1    0   0       0        0          0   \n",
+      "1    0         2      0       0   1    0   0       0        0          0   \n",
+      "2    1         0      0       0   1    1   0       0        0          0   \n",
+      "3    0         1      0       1   1    0   0       0        0          1   \n",
+      "4    0         0      0       0   0    0   1       1        1          0   \n",
+      "5    0         0      0       0   0    0   1       1        1          0   \n",
       "\n",
-      "      third      this  \n",
-      "0  0.000000  0.384085  \n",
-      "1  0.000000  0.281089  \n",
-      "2  0.511849  0.267104  \n",
-      "3  0.000000  0.384085  \n",
-      "(4, 9)\n"
+      "   second  the  third  this  \n",
+      "0       0    1      0     1  \n",
+      "1       1    1      0     1  \n",
+      "2       0    1      1     1  \n",
+      "3       0    1      0     1  \n",
+      "4       0    0      0     0  \n",
+      "5       0    0      0     0  \n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([1.91629073, 1.22314355, 1.51082562, 1.        , 1.91629073,\n",
-       "       1.91629073, 1.        , 1.91629073, 1.        ])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# This cell is about Tfidf vectorizer\n",
-    "# This will convert text into tfidf feature.\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer\n",
-    "corpus = [\n",
-    "    'This is the first document.',\n",
-    "    'This document is the second document.',\n",
-    "    'And this is the third one.',\n",
-    "    'Is this the first document?'\n",
-    "]\n",
-    "vectorizer = TfidfVectorizer(min_df=0.1)\n",
-    "X = vectorizer.fit_transform(corpus)\n",
-    "print(X)\n",
-    "print(X.shape)\n",
-    "# Learn the vocaboularies, tf and idf \n",
-    "# Returns a document term matrix.\n",
-    "vectorizer.get_feature_names_out()\n",
+    "test_data = [\"this is my first NLP\"]\n",
+    "result = vectorizer.transform(test_data)\n",
+    "result.toarray()\n",
     "Doc_Term_Matrix = pd.DataFrame(X.toarray(),columns = vectorizer.get_feature_names_out())\n",
-    "print(Doc_Term_Matrix) \n",
-    "print(Doc_Term_Matrix.shape)\n",
-    "# This will be the tf of each term.\n",
-    "# Note that tf is computed as the frequency within a document.\n",
-    "vectorizer.idf_ # It will show you the inverse document frequency."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  (0, 0)\t-0.5773502691896258\n",
-      "  (0, 8)\t-0.5773502691896258\n",
-      "  (0, 13)\t0.5773502691896258\n",
-      "  (0, 14)\t0.0\n",
-      "  (1, 0)\t-0.8164965809277261\n",
-      "  (1, 11)\t0.4082482904638631\n",
-      "  (1, 13)\t0.4082482904638631\n",
-      "  (1, 14)\t0.0\n",
-      "  (2, 4)\t-0.7071067811865475\n",
-      "  (2, 5)\t0.7071067811865475\n",
-      "  (2, 13)\t0.0\n",
-      "  (2, 14)\t0.0\n",
-      "  (3, 0)\t-0.5773502691896258\n",
-      "  (3, 8)\t-0.5773502691896258\n",
-      "  (3, 13)\t0.5773502691896258\n",
-      "  (3, 14)\t0.0\n",
-      "(4, 16)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# This cell will explain what hashing vectorizer is. \n",
-    "from sklearn.feature_extraction.text import HashingVectorizer\n",
-    "corpus = [\n",
-    "    'This is the first document.',\n",
-    "    'This document is the second document.',\n",
-    "    'And this is the third one.',\n",
-    "    'Is this the first document?'\n",
-    "]\n",
-    "# print(sample_text)\n",
-    "vectorizer = HashingVectorizer(n_features= 2**4)\n",
-    "Fit_text = vectorizer.fit_transform(corpus)\n",
-    "print(Fit_text) \n",
-    "print(Fit_text.shape) # (4,16)\n",
-    "# (4,16) means that there are 4 documents, and 16 words.\n",
-    "# The text is vectorized."
+    "print(Doc_Term_Matrix)\n",
+    "# Note that in the countvectorizer, it only counts the number of the term in a single sentence."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3.10.11 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -623,12 +456,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "35a25c9872cbda683d5908eca59acc1b206505f792393dc9b104ecdd0b60136b"
+    "hash": "89d36f605ae3aa71791baed15afeef29ec51f91c7f29be8219898f2e245b2a11"
    }
   }
  },
