--- a/data_collection/BERT_tutorial.ipynb
+++ b/data_collection/BERT_tutorial.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-06-12 17:13:32.375498: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX_VNNI FMA\n",
+      "2023-06-12 17:15:05.341303: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-06-12 17:13:34.495724: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX_VNNI FMA\n",
+      "2023-06-12 17:15:07.450830: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 AVX_VNNI FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-06-12 17:13:34.496336: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n",
+      "2023-06-12 17:15:07.452149: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n",
       "All model checkpoint layers were used when initializing TFBertForSequenceClassification.\n",
       "\n",
       "Some layers of TFBertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier']\n",
@@ -38,13 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Downloading data from https://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
+      "84125825/84125825 [==============================] - 7s 0us/step\n",
       "['urls_pos.txt', 'urls_unsup.txt', 'unsupBow.feat', 'neg', 'labeledBow.feat', 'pos', 'urls_neg.txt']\n"
      ]
     }
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,6 +118,256 @@
     "train['DATA_COLUMN'] = train['DATA_COLUMN'].str.decode(\"utf-8\")\n",
     "print(train.head())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATA_COLUMN</th>\n",
+       "      <th>LABEL_COLUMN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I can't believe that so much talent can be was...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>This movie blows - let's get that straight rig...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The saddest thing about this \"tribute\" is that...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I'm only rating this film as a 3 out of pity b...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Something surprised me about this movie - it w...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         DATA_COLUMN LABEL_COLUMN\n",
+       "0  I can't believe that so much talent can be was...            0\n",
+       "1  This movie blows - let's get that straight rig...            0\n",
+       "2  The saddest thing about this \"tribute\" is that...            0\n",
+       "3  I'm only rating this film as a 3 out of pity b...            0\n",
+       "4  Something surprised me about this movie - it w...            1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for j in test.take(1):\n",
+    "  test_feat = j[0].numpy()\n",
+    "  test_lab = j[1].numpy()\n",
+    "\n",
+    "test = pd.DataFrame([test_feat, test_lab]).T\n",
+    "test.columns = ['DATA_COLUMN', 'LABEL_COLUMN']\n",
+    "test['DATA_COLUMN'] = test['DATA_COLUMN'].str.decode(\"utf-8\")\n",
+    "test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "InputExample(guid=None, text_a='Hello, world', text_b=None, label=1)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "InputExample(guid=None,\n",
+    "             text_a = \"Hello, world\",\n",
+    "             text_b = None,\n",
+    "             label = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# From now on we will define two main functions.\n",
+    "# 1. convert_data_to_examples\n",
+    "# 2. convert_exampled_to_tf_Dataset\n",
+    "def convert_data_to_examples(train, test, DATA_COLUMN, LABEL_COLUMN): \n",
+    "  train_InputExamples = train.apply(lambda x: InputExample(guid=None, # Globally unique ID for bookkeeping, unused in this case\n",
+    "                                                          text_a = x[DATA_COLUMN], \n",
+    "                                                          text_b = None,\n",
+    "                                                          label = x[LABEL_COLUMN]), axis = 1)\n",
+    "\n",
+    "  validation_InputExamples = test.apply(lambda x: InputExample(guid=None, # Globally unique ID for bookkeeping, unused in this case\n",
+    "                                                          text_a = x[DATA_COLUMN], \n",
+    "                                                          text_b = None,\n",
+    "                                                          label = x[LABEL_COLUMN]), axis = 1)\n",
+    "  \n",
+    "  return train_InputExamples, validation_InputExamples\n",
+    "\n",
+    "  train_InputExamples, validation_InputExamples = convert_data_to_examples(train, \n",
+    "                                                                           test, \n",
+    "                                                                           'DATA_COLUMN', \n",
+    "                                                                           'LABEL_COLUMN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_examples_to_tf_dataset(examples, tokenizer, max_length=128):\n",
+    "    features = [] # -> will hold InputFeatures to be converted later\n",
+    "\n",
+    "    for e in examples:\n",
+    "        # Documentation is really strong for this method, so please take a look at it\n",
+    "        input_dict = tokenizer.encode_plus(\n",
+    "            e.text_a,\n",
+    "            add_special_tokens=True,\n",
+    "            max_length=max_length, # truncates if len(s) > max_length\n",
+    "            return_token_type_ids=True,\n",
+    "            return_attention_mask=True,\n",
+    "            pad_to_max_length=True, # pads to the right by default # CHECK THIS for pad_to_max_length\n",
+    "            truncation=True\n",
+    "        )\n",
+    "\n",
+    "        input_ids, token_type_ids, attention_mask = (input_dict[\"input_ids\"],\n",
+    "            input_dict[\"token_type_ids\"], input_dict['attention_mask'])\n",
+    "\n",
+    "        features.append(\n",
+    "            InputFeatures(\n",
+    "                input_ids=input_ids, attention_mask=attention_mask, token_type_ids=token_type_ids, label=e.label\n",
+    "            )\n",
+    "        )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen():\n",
+    "    for f in features:\n",
+    "        yield (\n",
+    "                {\n",
+    "                    \"input_ids\": f.input_ids,\n",
+    "                    \"attention_mask\": f.attention_mask,\n",
+    "                    \"token_type_ids\": f.token_type_ids,\n",
+    "                },\n",
+    "                f.label,\n",
+    "                )\n",
+    "\n",
+    "    return tf.data.Dataset.from_generator(\n",
+    "        gen,\n",
+    "        ({\"input_ids\": tf.int32, \"attention_mask\": tf.int32, \"token_type_ids\": tf.int32}, tf.int64),\n",
+    "        (\n",
+    "            {\n",
+    "                \"input_ids\": tf.TensorShape([None]),\n",
+    "                \"attention_mask\": tf.TensorShape([None]),\n",
+    "                \"token_type_ids\": tf.TensorShape([None]),\n",
+    "            },\n",
+    "            tf.TensorShape([]),\n",
+    "        ),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_COLUMN = 'DATA_COLUMN'\n",
+    "LABEL_COLUMN = 'LABEL_COLUMN'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ohwang/anaconda3/lib/python3.10/site-packages/transformers/tokenization_utils_base.py:2354: FutureWarning: The `pad_to_max_length` argument is deprecated and will be removed in a future version, use `padding=True` or `padding='longest'` to pad to the longest sequence in the batch, or use `padding='max_length'` to pad to a max length. In this case, you can give a specific length with `max_length` (e.g. `max_length=45`) or leave max_length to None to pad to the maximal input size of the model (e.g. 512 for Bert).\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'shuffle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m train_InputExamples, validation_InputExamples \u001b[39m=\u001b[39m convert_data_to_examples(train, test, DATA_COLUMN, LABEL_COLUMN)\n\u001b[1;32m      3\u001b[0m train_data \u001b[39m=\u001b[39m convert_examples_to_tf_dataset(\u001b[39mlist\u001b[39m(train_InputExamples), tokenizer)\n\u001b[0;32m----> 4\u001b[0m train_data \u001b[39m=\u001b[39m train_data\u001b[39m.\u001b[39;49mshuffle(\u001b[39m100\u001b[39m)\u001b[39m.\u001b[39mbatch(\u001b[39m32\u001b[39m)\u001b[39m.\u001b[39mrepeat(\u001b[39m2\u001b[39m)\n\u001b[1;32m      6\u001b[0m validation_data \u001b[39m=\u001b[39m convert_examples_to_tf_dataset(\u001b[39mlist\u001b[39m(validation_InputExamples), tokenizer)\n\u001b[1;32m      7\u001b[0m validation_data \u001b[39m=\u001b[39m validation_data\u001b[39m.\u001b[39mbatch(\u001b[39m32\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shuffle'"
+     ]
+    }
+   ],
+   "source": [
+    "train_InputExamples, validation_InputExamples = convert_data_to_examples(train, test, DATA_COLUMN, LABEL_COLUMN)\n",
+    "\n",
+    "train_data = convert_examples_to_tf_dataset(list(train_InputExamples), tokenizer)\n",
+    "train_data = train_data.shuffle(100).batch(32).repeat(2)\n",
+    "\n",
+    "validation_data = convert_examples_to_tf_dataset(list(validation_InputExamples), tokenizer)\n",
+    "validation_data = validation_data.batch(32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
